- Add facility to import GNU Octave ascii data files
- Improvements to formatting in Spanish translation
- In statistical tables utility, add a bit more information for
  Durbin-Watson and improve formatting
- smpl --restrict: make it not an error if the restriction has
  no effect (drops no observations)
- Forecasts for GUI models: make these available for all types
  of models (but not all with error bounds)
- Confidence interval for coefficients, GUI model menu: make
  available for all models
- Improvements to several dialog boxes
- Numerous small bug-fixes

03/14/2005 version 1.3.3
- Add "poisson" command (thanks to Jack Lucchetti)
- Fix memory leak in VAR command with impulse responses, in the
  command-line program
- Fix bug: possible crash in "loop foreach" if an invalid variable
  name is given
- Fix bug: "display data" broken in gui program for long datasets
  ("press a key to continue" mechanism was invoked erroneously)
- Fix bug: wrong variable shown when you select "Display actual,
  fitted, residual" for a GARCH model
- Fix bug: hausman test for pooled model would crash if there
  were not sufficient degrees of freedom to estimate the group
  means model
- Fix bug: crash if default data and script files not installed
  with program (thanks to Ignacio and Dirk for finding this)
- Fix bug in genr: unary minus could be wrongly handled within the
  argument to a function
- Fixes for appending data (make more flexible: allow appending of
  observations and/or variables)
- Fixes for cointegration tests: improve dialogs and prevent crash
  on selection of just one variable plus the constant
- Fix naming of Mahalanobis distances variable
- Respect omission of constant from an ARMAX model
- Graph control dialog: add one-click option to force use of a
  single y axis
- New: in case of AR(1) estimation (Cochrane-Orcutt and similar), if
  a lagged dependent variable is included then we automatically